# lib

./: .gitignore  CMakeLists.txt  readme.md
.github/workflows/: close-pr.yml  cmake-multi-platform.yml
include/BinaryIO/: Exports.h  Library.h  Platform.h
include/BinaryIO/buffer/: BinaryBuffer.h  BinaryBuffer.tpp  SizedBinaryBuffer.h  SizedBinaryBuffer.tpp
include/BinaryIO/container/: FixedArray.h
include/BinaryIO/io/: Serializable.h
include/BinaryIO/io/interface/: IAccessible.h  IBuffer.h  ICanDeserialize.h  ICanSerialize.h  IPeekable.h  IReadable.h  ISeekable.h  ISimplePeekable.h  IWritable.h
include/BinaryIO/io/iter/: Iterator.h
include/BinaryIO/stream/: BinaryInputStream.h  BinaryInputStream.tpp  BinaryOutputStream.h  BinaryOutputStream.tpp
include/BinaryIO/util/: ByteOrder.h  ByteOrderUtil.h  Origin.h
include/BinaryIO/util/string/: StringConverter.h  StringLengthEncoding.h
include/LCE/: libLCE.h  libLCEExports.h
include/LCE/archive/: Archive.h
include/LCE/bindings/: EmscriptenBindings.h
include/LCE/color/: Color.h  ColorFile.h
include/LCE/compression/: Compression.h
include/LCE/filesystem/: Directory.h  FSObject.h  File.h  Filesystem.h
include/LCE/localization/: Language.h  LocalizationFile.h
include/LCE/save/: SaveFile.h  SaveFileCommons.h  SaveFileOld.h  Thumb.h
include/LCE/soundbank/: BinkaFile.h  Soundbank.h
include/LCE/util/: StringUtilities.h
src/: Library.cpp  libLCEExports.cpp  main.cpp
src/archive/: Archive.cpp
src/bindings/: EmscriptenBindings.cpp
src/buffer/: BinaryBuffer.cpp  SizedBinaryBuffer.cpp
src/color/: ColorFile.cpp  ColorFileOld.cpp
src/color/Colors/: Color.cpp  WorldColor.cpp
src/compression/: Compression.cpp
src/filesystem/: Directory.cpp  FSObject.cpp  File.cpp  Filesystem.cpp
src/io/: IReadable.cpp  IWritable.cpp  Serializable.cpp
src/localization/: Language.cpp  LocalizationFile.cpp
src/save/: SaveFile.cpp  SaveFileCommons.cpp  SaveFileOld.cpp  Thumb.cpp
src/soundbank/: Soundbank.cpp
src/stream/: BinaryInputStream.cpp  BinaryOutputStream.cpp
src/util/: StringUtilities.cpp
src/util/string/: StringConverter.cpp  StringConverter_stub.cpp
tests/: CMakeLists.txt  util.h
tests/tests/: formats.cpp  formats.h  vfs.cpp  vfs.h
wasm/: main.cpp
